@@ -251,7 +251,7 @@ public class TrueTypeFont implements org.newdawn.slick.Font {
 				if (i < 256) { // standard characters
 					charArray[i] = newIntObject;
 				} else { // custom characters
-					customChars.put(new Character(ch), newIntObject);
+					customChars.put(Character.valueOf(ch), newIntObject);
 				}
 
 				fontImage = null;
@@ -316,7 +316,7 @@ public class TrueTypeFont implements org.newdawn.slick.Font {
 			if (currentChar < 256) {
 				intObject = charArray[currentChar];
 			} else {
-				intObject = (IntObject) customChars.get(new Character((char) currentChar));
+				intObject = (IntObject) customChars.get(Character.valueOf((char) currentChar));
 			}
 
 			if (intObject != null) {
@@ -385,7 +385,7 @@ public class TrueTypeFont implements org.newdawn.slick.Font {
 			if (charCurrent < 256) {
 				intObject = charArray[charCurrent];
 			} else {
-				intObject = (IntObject) customChars.get(new Character((char) charCurrent));
+				intObject = (IntObject) customChars.get(Character.valueOf((char) charCurrent));
 			}
 
 			if (intObject != null) {
